--- a/urls.cfg
+++ b/urls.cfg
@@ -5,3 +5,4 @@ CC_Checker_Non_Sk=https://alonecoder.in/NonSkChecker/login/login.php
 Bunny_Checker=https://alonecoder.in/AllinoneBunnyChecker/index.php
 Telegram=https://t.me/xAloneCoder
 Tor_Links=https://spaceb.in/api/v1/documents/YOvypsba/raw
+Link_Shortener=https://short.alonecoder.in
